--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section id="restaurant-container">
+    <section id="restaurants-container">
       <div class="filter-options">
-        <h2>Filter Results</h2>
+        <h2 tabindex="0">Filter Results</h2>
         <div class= "filter-selectors">
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">Neighborhoods</option>
@@ -43,7 +43,7 @@
 
 
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017<a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
 </body>
