--- a/restaurant.html
+++ b/restaurant.html
@@ -39,7 +39,7 @@
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
+      <h4 id="restaurant-address"></h4>
       <table id="restaurant-hours"></table>
     </section>
     <!-- end restaurant -->
