--- a/restaurant.html
+++ b/restaurant.html
@@ -38,7 +38,7 @@
     <section id="restaurant-container" role="contentinfo" aria-label="Information about restaurant">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
+      <h3 id="restaurant-cuisine"></h3>
       <h4 id="restaurant-address"></h4>
       <table id="restaurant-hours"></table>
     </section>
